--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "html2pdf.js": "^0.10.3",
     "jspdf": "^3.0.1",
     "react": "^19.1.1",
+    "react-compare-slider": "^3.1.0",
     "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-medium-image-zoom": "^5.3.0"
   }
 }
